# cp631-final

./: .gitignore  Cargo.toml  README.adoc  conda_requirements.txt  cp631-final.docx  cp631-final.ipynb  cp631_final.ipynb  cp631_final.py  cp631_final_v1.py  cp631_final_v2.ipynb  cp631_final_v2.py  go.mod  kaggle.json  main.py  pyproject.toml  requirements.txt  stock_price_history.py  technical_analysis.py
.github/workflows/: ci.yml
internal/: mpp_demo.go
outputs/: results-1-10-30.csv  results-1-100-180.csv  results-1-200-365.csv  results-1-50-90.csv  results-16-100-180.csv  results-2-10-30.csv  results-2-100-180.csv  results-32-10-30.csv  results-32-50-90.csv  results-4-100-180.csv  stats-1.csv  stats-16.csv  stats-2.csv  stats-32.csv  stats-4.csv  stats-8.csv
s-and-p-500-constituents/: sandp500-20240310.csv
src/: data_visualization.rs  lib.rs  main.rs  stock_price_history.rs  technical_analysis.rs
src/technical_analysis/: mod.rs
test/mpp/: mpp_test.go
tests/: integration_test.rs
tests/cpu/: mod.rs
tests/mpi/: mod.rs
