[package]
name = "cp631-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { version = "^0.7.0", features = ["user-operations", "derive"] }

[dev-dependencies]
hamcrest = {version = "^0.1.5"}
machine-info = {version = "^1.0.9"}
num_cpus = {version = "^1.16.0"}
rspec = {version = "^1.0"}
