[package]
name = "cp631-final"
version = "0.1.0"
edition = "2021"

[dependencies]
mpi = { version = "^0.7.0", features = ["user-operations", "derive"] }
mpi-sys = "0.2.1"

[dev-dependencies]
hamcrest = {version = "^0.1.5"}
machine-info = {version = "^1.0.9"}
num_cpus = {version = "^1.16.0"}
rspec = {version = "^1.0"}