[package]
name = "cp631-final"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
csv = "1.3.0"
env_logger = "0.11.3"
log = "0.4.21"
mpi = "0.7.0"
plotters = "0.3.5"
reqwest = "0.11.25"
scraper = "0.19.0"
serde = "1.0.197"
ta = "^0.5.0"
time = "0.3.34"
tokio-test = "0.4.3"
yahoo_finance_api = {version = "2.1.0", features = ["blocking"]}

[dev-dependencies]
hamcrest = {version = "^0.1.5"}
machine-info = {version = "^1.0.9"}
num_cpus = {version = "^1.16.0"}
rspec = {version = "^1.0"}

